// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Button Primary Disabled Variant Snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <button
    className="css-7zijx9"
    disabled={true}
    type="submit"
  >
    Primary button
  </button>
</div>
`;

exports[`Storyshots Elements|Button Primary Variant Snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <button
    className="css-7zijx9"
    disabled={false}
    type="submit"
  >
    Primary button
  </button>
</div>
`;

exports[`Storyshots Elements|Button Secondary Disabled Variant Snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <button
    className="css-1cu7wal"
    disabled={true}
    type="submit"
  >
    Primary button
  </button>
</div>
`;

exports[`Storyshots Elements|Button Secondary Variant Snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <button
    className="css-1cu7wal"
    disabled={false}
    type="submit"
  >
    Primary button
  </button>
</div>
`;
